ocaml/testsuite/tests/typing-layouts/immediates_disabled.compilers.reference
File "immediates.ml", line 30, characters 0-30:
30 | type a : immediate = A | B | C
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The extension "layouts" is disabled and cannot be used
